<resources>
    <string name="app_name">HEC Prototype</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="set_subscription">Step 2: Choose your Subscription Type</string>
    <string name="choose_payment">Step 3: Choose Your Payment Method</string>
    <string name="choose_notification_method">Step 4: Choose Your Notification Method</string>
    <string name="send_notification">Step 5: Contact Info</string>
    <string name="complete_payment_online">Step 6: Complete your Payment online</string>
    <string name="payment_cancelled">Payment Cancelled</string>
    <string name="cancelled_extra_info">Please press the button below to return to the subscription page</string>
    <string name="notification_extra_info">We will email or text you a link where you can finish your payment on a laptop or mobile device</string>
    <string name="send_email">Send Email To:</string>
    <string name="submit_notification_method">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="prompt_go_online">Please proceed to your laptop or mobile device and follow the link we sent you in order to approve your payment</string>
    <string name="prompt_continue">When you\'re finished paying online with the link we sent, you will automatically proceed to Netflix</string>
    <string name="standard">standard</string>
    <string name="premium">premium</string>
    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_payment_method">PaymentMethodActivity</string>
    <string name="title_activity_send_notification">SendNotificationActivity</string>
    <string name="title_activity_tv">TVActivity</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="title_activity_subscription_type">SubscriptionTypeActivity</string>
    <string name="title_activity_cancelled">CancelledActivity</string>
    <string name="goto_subscription">Go To Subscription Page</string>
    <string name="title_activity_notification_method">NotificationMethodActivity</string>
</resources>