<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/netflix_background"
    android:id="@+id/activity_login_wrapper"
    android:layout_height="match_parent">
    <ImageView
        android:padding="@dimen/large_margin"
        android:id="@+id/login_netflix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/netflix_logo"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/email"
        android:layout_gravity="center_horizontal"
        android:width="@dimen/view_size_larger"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/password"
        android:layout_gravity="center_horizontal"
        android:width="@dimen/view_size_larger"
        android:inputType="textPassword"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:onClick="choosePaymentMethod"
        android:layout_gravity="center_horizontal" />
</LinearLayout>