<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.paypal.hecprototype.NotificationMethodActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/tiny_margin"
        android:textSize="@dimen/text_size"
        android:textIsSelectable="false"
        android:text="@string/choose_notification_method"
        android:id="@+id/choose_notification_title"
        android:textStyle="italic"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        />
    <ImageView
        android:padding="@dimen/tiny_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/netflix_logo"
        android:id="@+id/choose_notification_netflix"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/tiny_margin"
        android:textSize="@dimen/text_small"
        android:id="@+id/extra_info_notification_method"
        android:textIsSelectable="false"
        android:text="@string/notification_extra_info"
        android:textStyle="italic"
        android:layout_below="@id/choose_notification_title"
        android:layout_toLeftOf="@id/choose_notification_netflix"
        android:textColor="@color/light_gray"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/mid_gray"
        android:orientation="horizontal"
        android:layout_below="@id/extra_info_notification_method"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/normal_margin">


        <Button
            android:layout_width="@dimen/view_size_larger"
            android:layout_height="@dimen/view_size"
            android:text="@string/sms"
            android:layout_margin="@dimen/normal_margin"
            android:clickable="true"
            android:onClick="sendSMS"
            />

        <Button
            android:layout_width="@dimen/view_size_larger"
            android:layout_height="@dimen/view_size"
            android:id="@+id/credit_card"
            android:text="@string/email"
            android:layout_margin="@dimen/normal_margin"
            android:onClick="sendEmail"
            android:scaleType="fitXY"
            />
    </LinearLayout>

</RelativeLayout>
