<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.paypal.hecprototype.CancelledActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/tiny_margin"
        android:textSize="@dimen/text_size"
        android:textIsSelectable="false"
        android:text="@string/payment_cancelled"
        android:id="@+id/cancelled_title"
        android:textStyle="italic"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        />
    <ImageView
        android:padding="@dimen/tiny_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/netflix_logo"
        android:id="@+id/cancelled_netflix"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/tiny_margin"
        android:textSize="@dimen/text_small"
        android:textIsSelectable="false"
        android:text="@string/cancelled_extra_info"
        android:textStyle="italic"
        android:layout_below="@id/cancelled_title"
        android:layout_toLeftOf="@id/cancelled_netflix"
        android:textColor="@color/light_gray"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/goto_subscription"
        android:onClick="cancel"/>
</RelativeLayout>
