<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.paypal.hecprototype.LoadingActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/tiny_margin"
        android:textSize="@dimen/text_size"
        android:textIsSelectable="false"
        android:text="@string/complete_payment_online"
        android:id="@+id/loading_title"
        android:textStyle="italic"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        />
    <ImageView
        android:padding="@dimen/tiny_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/netflix_logo"
        android:id="@+id/loading_netflix"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/tiny_margin"
        android:textSize="@dimen/text_small"
        android:textIsSelectable="false"
        android:text="@string/prompt_continue"
        android:id="@+id/prompt_continue"
        android:textStyle="italic"
        android:layout_below="@id/loading_title"
        android:layout_toLeftOf="@id/loading_netflix"
        android:textColor="@color/light_gray"
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/tiny_margin"
            android:id="@+id/loading_info"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ProgressBar
                android:id="@+id/progressLoadingPage"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="@dimen/view_size_largest"
                android:layout_height="wrap_content"
                android:textSize = "@dimen/text_tiny"
                android:textColor="@color/white"
                android:textIsSelectable="false"
                android:text="@string/prompt_go_online"
                android:gravity="center_horizontal"/>

        </LinearLayout>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/cancel"
        android:onClick="cancel"/>
</RelativeLayout>
