<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.paypal.hecprototype.SubscriptionTypeActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/tiny_margin"
        android:textSize="@dimen/text_size"
        android:textIsSelectable="false"
        android:text="@string/set_subscription"
        android:textStyle="italic"
        android:textColor="@color/white"
        />
    <ImageView
        android:padding="@dimen/tiny_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/netflix_logo"
        android:layout_alignParentEnd="true"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/mid_gray"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:padding="@dimen/normal_margin">

        <Button
            android:layout_width="@dimen/view_size_larger"
            android:layout_height="@dimen/view_size"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/standard"
            android:clickable="true"
            android:onClick="paymentStandard"
            />

        <Button
            android:layout_width="@dimen/view_size_larger"
            android:layout_height="@dimen/view_size"
            android:text="@string/premium"
            android:layout_margin="@dimen/normal_margin"
            android:clickable="true"
            android:scaleType="fitXY"
            android:onClick="paymentPremium"
            />
    </LinearLayout>

</RelativeLayout>
