<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/activity_send_notification_wrapper"
    tools:context="com.paypal.hecprototype.SendNotificationActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/tiny_margin"
        android:textSize="@dimen/text_size"
        android:textIsSelectable="false"
        android:text="@string/send_notification"
        android:id="@+id/notification_title"
        android:textStyle="italic"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        />
    <ImageView
        android:padding="@dimen/tiny_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/netflix_logo"
        android:id="@+id/notification_netflix"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/tiny_margin"
        android:textSize="@dimen/text_small"
        android:textIsSelectable="false"
        android:text="@string/notification_extra_info"
        android:textStyle="italic"
        android:layout_below="@id/notification_title"
        android:layout_toLeftOf="@id/notification_netflix"
        android:textColor="@color/light_gray"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/mid_gray"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:padding="@dimen/tiny_margin">

        <EditText
            android:id="@+id/contact"
            android:layout_width="@dimen/view_size_larger"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notification_button"
            android:text="@string/submit_notification_method"
            android:onClick="sendCustomNotification"/>

    </LinearLayout>
</RelativeLayout>
